--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -14,6 +14,7 @@
               {{- site.middle_name -}}
             {% endif %}
             {% if site.last_name %}
+            <span class="font-weight-bold">
               {{- site.last_name -}}
             {% endif %}
           {% else %}
